--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@300&family=Tenor+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Roboto&family=Urbanist&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
     <section class="section">
         <div class="container">
-            <p>Maria Parkhomova</p>
-            <p>Schülerin der 9. Klasse</p>
+            <p class="header-text">Maria Parkhomova</p>
+            <p class="header-text">Schülerin der 9. Klasse</p>
         </div>
     </section>
     <hr>
@@ -22,45 +22,61 @@
     <section class="section">
         <div class="container">
             <img src="./images/Rectangle_2.png" alt="photo_of_me">
-            <h1 class="title">Maria<br>
-                Parkhomova</h1>
-            <h3 class="subtitle">Schülerin</h3>
-            <p class="goal-text">Ich bin neu in der Website-Entwicklung.<br>
-                Mein Ziel ist es, zu lernen,<br>
-                wie man schöne und moderne Websites und<br>
-                Illustrationen erstellt.</p>
+            <div class="about_me">
+                <h1 class="title">Maria<br>
+                    Parkhomova</h1>
+                <h3 class="subtitle">Schülerin</h3>
+                <p class="goal-text">Ich bin neu in der Website-Entwicklung.<br>
+                    Mein Ziel ist es, zu lernen,<br>
+                    wie man schöne und moderne Websites und<br>
+                    Illustrationen erstellt.</p>
+            </div>
         </div>
     </section>
     <hr>
 
     <section class="section">
-        <!-- Fähigkeiten -->
-        <h2 class="main-subtitle">Fähigkeiten</h2>
-        <ul class="list">
-            <li class="main-text">Englisch, Niveau B1</li>
-            <li class="main-text">Deutsch, Niveau B1</li>
-            <li class="main-text">Frontend-Entwicklung</li>
-        </ul>
-        <!-- Ausbildung -->
-        <h2 class="main-subtitle">Ausbildung</h2>
-        <p class="main-text">Ludwigsgymnasium<br>
-            von Mai 2022 bis heute</p>
-        <!-- Persönliche Qualitäten -->
-        <h2 class="main-subtitle-normal">Persönliche Qualitäten</h2>
-        <ul class="list">
-            <li class="main-text">Selbständige Weise zu arbeiten</li>
-            <li class="main-text">Verantwortung in der Teamarbeit</li>
-            <li class="main-text">Führungskompetenz</li>
-            <li class="main-text">Die Fähigkeit, mit einer großen Menge an Informationen zu arbeiten</li>
-            <li class="main-text">Aufmerksamkeit</li>
-        </ul>
+       <div class="container">
+         <!-- Fähigkeiten -->
+         <div>
+            <h2 class="main-subtitle">Fähigkeiten</h2>
+            <ul class="list">
+                <li class="main-text">Englisch, Niveau B1</li>
+                <li class="main-text">Deutsch, Niveau B1</li>
+                <li class="main-text">Frontend-Entwicklung</li>
+            </ul>
+         </div>
+         <!-- Vertical line -->
+         <div class="vertical-line"></div>
+         <div class="ed_and_qualities">
+            <!-- Ausbildung -->
+            <div>
+                <h2 class="main-subtitle">Ausbildung</h2>
+                <p class="main-text">Ludwigsgymnasium<br>
+                    von Mai 2022 bis heute</p>
+            </div>
+            <!-- Persönliche Qualitäten -->
+            <div>
+                <h2 class="main-subtitle-normal">Persönliche Qualitäten</h2>
+                <ul class="list">
+                    <li class="main-text">Selbständige Weise zu arbeiten</li>
+                    <li class="main-text">Verantwortung in der Teamarbeit</li>
+                    <li class="main-text">Führungskompetenz</li>
+                    <li class="main-text">Die Fähigkeit, mit einer großen Menge an Informationen zu arbeiten</li>
+                    <li class="main-text">Aufmerksamkeit</li>
+                </ul>
+            </div>
+         </div>
+       </div>
     </section>
     <hr>
 
     <!-- Footer -->
     <section class="section footer">
-        <p class="footer-text">+ 49 15 17 2836102</p>
-        <p class="footer-text">maria9parhomova@gmail.com</p>
+        <div class="container">
+            <p class="footer-text">+ 49 15 17 2836102</p>
+            <p class="footer-text">maria9parhomova@gmail.com</p>
+        </div>
     </section>
 </body>
 </html>
