--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=\, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lebenslauf</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Roboto&family=Urbanist&display=swap" rel="stylesheet">
@@ -39,7 +38,7 @@
        <div class="container">
          <!-- Fähigkeiten -->
          <div>
-            <h2 class="main-subtitle">Fähigkeiten</h2>
+            <h2 class="main-subtitle">FÄCHIGKEITEN</h2>
             <ul class="list">
                 <li class="main-text">Englisch, Niveau B1</li>
                 <li class="main-text">Deutsch, Niveau B1</li>
@@ -51,13 +50,13 @@
          <div class="ed_and_qualities">
             <!-- Ausbildung -->
             <div>
-                <h2 class="main-subtitle">Ausbildung</h2>
+                <h2 class="main-subtitle">AUSBILDUNG</h2>
                 <p class="main-text">Ludwigsgymnasium<br>
                     von Mai 2022 bis heute</p>
             </div>
             <!-- Persönliche Qualitäten -->
             <div>
-                <h2 class="main-subtitle-normal">Persönliche Qualitäten</h2>
+                <h2 class="main-subtitle">Persönliche Qualitäten</h2>
                 <ul class="list">
                     <li class="main-text">Selbständige Weise zu arbeiten</li>
                     <li class="main-text">Verantwortung in der Teamarbeit</li>
